JS cleanup and click fix on mobile

--- a/assets/scss/_main.scss
+++ b/assets/scss/_main.scss
@@ -92,6 +92,8 @@ form input{
 
   width: auto;
 
+  -webkit-user-modify:read-write;
+
   span{
     font-family: $base-font;
   }
